--- a/style.css
+++ b/style.css
@@ -3,35 +3,29 @@ body {
 }
 
 .mainbox {
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
-  margin: auto;
-  height: 600px;
-  width: 600px;
-  position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 100px;
 }
 
 .err {
   color: #10f4ff;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 11rem;
-  position: absolute;
-  left: 20%;
-  top: 8%;
 }
 
 .fas {
-  position: absolute;
   font-size: 6rem;
-  left: 47%;
-  top: 18%;
   color: #10f4ff;
 }
 
 .far {
-  position: absolute;
   font-size: 8.5rem;
-  left: 42%;
-  top: 15%;
   color: #10f4ff;
 }
 
@@ -39,19 +33,34 @@ body {
   color: #10f4ff;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 11rem;
-  position: absolute;
-  left: 68%;
-  top: 8%;
 }
 
 .msg {
   text-align: center;
   font-family: 'Nunito Sans', sans-serif;
   font-size: 1.6rem;
-  position: absolute;
-  left: 16%;
-  top: 45%;
-  width: 75%;
+  width: 65%;
+}
+
+.animated {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container-row {
+  display: grid;
+}
+
+.layer1,
+.layer2 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.bolt {
+  padding-top: 20px;
+  padding-left: 30px;
 }
 
 a {
@@ -61,4 +70,10 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 390px) {
+  .mainbox {
+    padding-top: 0px;
+  }
 }
