--- a/style.css
+++ b/style.css
@@ -72,8 +72,12 @@ a:hover {
   text-decoration: underline;
 }
 
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 500px) {
   .mainbox {
-    padding-top: 0px;
+    padding-top: 50px;
+  }
+
+  .msg {
+    width: 90%;
   }
 }
